# longxiaclaw

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  WAKEUP.md  pyproject.toml
.github/workflows/: ci.yml
longxiaclaw/: __init__.py  __main__.py  main.py
longxiaclaw/backends/: __init__.py  base.py  qwen_cli.py
longxiaclaw/channels/: __init__.py  base.py  terminal.py
longxiaclaw/memory/: __init__.py  manager.py
longxiaclaw/scheduler/: __init__.py  state.py  task_scheduler.py
longxiaclaw/skills/: __init__.py  skill_manager.py
longxiaclaw/system/: __init__.py  config.py  health.py  logger.py
longxiaclaw/tests/: conftest.py  test_process_message.py
longxiaclaw/tests/test_backends/: test_qwen_cli.py
longxiaclaw/tests/test_channels/: test_terminal.py
longxiaclaw/tests/test_memory/: test_manager.py
longxiaclaw/tests/test_scheduler/: test_state.py  test_task_scheduler.py
longxiaclaw/tests/test_skills/: test_skill_manager.py
longxiaclaw/tests/test_system/: test_config.py  test_health.py  test_logger.py
longxiaclaw/tests/test_tools/: test_web_search.py
longxiaclaw/tests/test_tui/: test_app.py  test_commands.py  test_components.py  test_theme.py
longxiaclaw/tools/: __init__.py  web_search.py
longxiaclaw/tui/: __init__.py  app.py  components.py  theme.py
skills/: _template.md  summarize.md  translate.md  web_search.md
